testsuite/tests/lexical_envs/invalid_subunit_root/common.lkt
import lexer_example

class FooNode implements Node[FooNode] {
}
